; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/usb/input/extr_wmt.c_wmt_ev_open_11.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/usb/input/extr_wmt.c_wmt_ev_open_11.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.evdev_dev = type { i32 }
%struct.wmt_softc = type { i32*, i32 }

@MA_OWNED = common dso_local global i32 0, align 4
@WMT_INTR_DT = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.evdev_dev*, i8*)* @wmt_ev_open_11 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @wmt_ev_open_11(%struct.evdev_dev* %0, i8* %1) #0 {
  %3 = alloca %struct.evdev_dev*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca %struct.wmt_softc*, align 8
  store %struct.evdev_dev* %0, %struct.evdev_dev** %3, align 8
  store i8* %1, i8** %4, align 8
  %6 = load i8*, i8** %4, align 8
  %7 = bitcast i8* %6 to %struct.wmt_softc*
  store %struct.wmt_softc* %7, %struct.wmt_softc** %5, align 8
  %8 = load %struct.wmt_softc*, %struct.wmt_softc** %5, align 8
  %9 = getelementptr inbounds %struct.wmt_softc, %struct.wmt_softc* %8, i32 0, i32 1
  %10 = load i32, i32* @MA_OWNED, align 4
  %11 = call i32 @mtx_assert(i32* %9, i32 %10)
  %12 = load %struct.wmt_softc*, %struct.wmt_softc** %5, align 8
  %13 = getelementptr inbounds %struct.wmt_softc, %struct.wmt_softc* %12, i32 0, i32 0
  %14 = load i32*, i32** %13, align 8
  %15 = load i64, i64* @WMT_INTR_DT, align 8
  %16 = getelementptr inbounds i32, i32* %14, i64 %15
  %17 = load i32, i32* %16, align 4
  %18 = call i32 @usbd_transfer_start(i32 %17)
  ret i32 0
}

declare dso_local i32 @mtx_assert(i32*, i32) #1

declare dso_local i32 @usbd_transfer_start(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
